Fix markdown alignments

--- a/twake/frontend/src/app/components/Twacode/Twacode.scss
+++ b/twake/frontend/src/app/components/Twacode/Twacode.scss
@@ -3,7 +3,8 @@
 /* PseudoMarkdownCompiler */
 
 .markdown {
-  & > span {
+  & > span,
+  span > span {
     vertical-align: middle;
   }
 
